--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,6 @@
-Version 8.1 (September 15, 2017)
+Version 8.1 (September 16, 2017)
    •Export dictionary to HTML
+   •Include updated help file
    •Redesigned accent window
    •Multiple accents can be selected for a single character
    •Snow & Desert theme
