--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ Version 8.2 (September 22, 2017)
    •Check for updates at startup now on by default
    •Fixed typo on style dialog
    •Revised look of color buttons
+   •Automatically open generated HTML file on completion
 Version 8.1 (September 16, 2017)
    •Export dictionary to HTML
    •Redesigned accent window
