Change update file

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,12 +1,12 @@
 Version 8.2 (September 30, 2017)
-   •Find words in dictionary
-   •Color panel for quick access to font/highlight colors
-   •Check for updates at startup now on by default
-   •Fixed typo on style dialog
-   •Fixed accents remaining after dlgAccents closes and re-opens
-   •Revised look of color buttons
-   •Automatically open generated HTML file on completion
-   •Replace most StylizedButtons with native buttons
+   •Find words in dictionary   
+   •Color panel for quick access to font/highlight colors   
+   •Check for updates at startup now on by default    
+   •Fixed typo on style dialog   
+   •Fixed accents remaining after Accents dialog closes and re-opens   
+   •Revised look of color buttons   
+   •Automatically open generated HTML file on completion   
+   •Replace most StylizedButtons with native buttons   
 Version 8.1 (September 16, 2017)
    •Export dictionary to HTML
    •Redesigned accent window
