--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,10 +1,12 @@
 Version 8.5 (October 14, 2017)	
    •Minor changes to splash screen
-   •Automatically fill in title and description on dictionary Html generator
+   •Automatically fill in title and description on dictionary HTML generator
    •Notebook panel re-design   
    •Language field in notebook panel
    •'Snow' theme now has a white background to match Windows 10
-   •Fixed bug where decimal separators  other than "." would throw errors
+   •Mutiple dialogs layouts have been tweaked
+   •Dialogs now match theme
+   •Fixed bug where decimal separators other than "." would throw errors
 Version 8.2 (September 30, 2017)
    •Find words in dictionary   
    •Color panel for quick access to font/highlight colors   
